Removed postprocessing and subsequently functionals thereof.

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "73d93e3a",
    "metadata": {
     "is_executing": true
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "a3d701a4",
    "metadata": {},
    "outputs": [],
@@ -466,282 +466,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "81e9f040",
-   "metadata": {},
-   "source": [
-    "## Postprocessing\n",
-    "The `RungeKuttaIntegrator` doesn't just have the ability to do time integration, it also can do time-step postprocessing.\n",
-    "An example use case could be the computation of a value derived of the quantities of the time integration, which isn't necessarily dependent on time (or at least not in the form of time derivatives).\n",
-    "While it is possible to \"hack\" the derived quantity into the time integration in most cases, it is also useful to have such an ability to postprocess, be it because it's less computationally intensive, or simply because it's easier to understand.\n",
-    "\n",
-    "For postprocessing, we give a second OpenMDAO problem to the `RungeKuttaIntegrator`, which takes a subset of the time integration quantities as inputs, and from which we can get some new additional quantities. We extend the first example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc4c6add",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LogComponent(om.ExplicitComponent):\n",
-    "    def setup(self):\n",
-    "        self.add_input(\"x\", val = 1.0, tags = [\"x\", \"postproc_input_var\"])\n",
-    "        self.add_output(\"log_x\", val = 0.0, tags = [\"log_x\" ,\"postproc_output_var\"])\n",
-    "\n",
-    "    def setup_partials(self):\n",
-    "        self.declare_partials(\"*\", \"*\")\n",
-    "        \n",
-    "\n",
-    "    def compute(self, inputs, outputs):\n",
-    "        outputs[\"log_x\"] = np.log(inputs[\"x\"])\n",
-    "\n",
-    "    def compute_partials(self, inputs, partials):\n",
-    "        partials[\"log_x\", \"x\"] = 1 / inputs[\"x\"]\n",
-    "\n",
-    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
-    "\n",
-    "time_stage_problem = om.Problem()\n",
-    "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponent(integration_control=integration_control))\n",
-    "\n",
-    "postproc_problem = om.Problem()\n",
-    "postproc_problem.model.add_subsystem(\"log_comp\", LogComponent())\n",
-    "\n",
-    "runge_kutta_problem = om.Problem()\n",
-    "runge_kutta_problem.model.add_subsystem(\n",
-    "    \"rk_comp\", \n",
-    "    RungeKuttaIntegrator(\n",
-    "        time_stage_problem=time_stage_problem,\n",
-    "        postprocessing_problem=postproc_problem,\n",
-    "        butcher_tableau=implicit_euler,\n",
-    "        integration_control=integration_control,\n",
-    "        time_integration_quantities=[\"x\"],\n",
-    "        postprocessing_quantities=[\"log_x\"],\n",
-    "        write_file=\"postproc_example.h5\",\n",
-    "        write_out_distance=10,\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "runge_kutta_problem.setup()\n",
-    "runge_kutta_problem.run_model()\n",
-    "\n",
-    "fig, ax = plt.subplots(1,1)\n",
-    "\n",
-    "t = np.linspace(0.0,1.0, 11)\n",
-    "ax.plot(t, np.exp(t), label=\"Analytic solution.\")\n",
-    "ax.plot(t, t, label=\"Postprocessed analytic solution\")\n",
-    "\n",
-    "numeric_data = np.zeros(11)\n",
-    "postproc_data = np.zeros(11)\n",
-    "with h5py.File(\"postproc_example.h5\", mode = \"r\") as f:\n",
-    "    for i in range(11):\n",
-    "        numeric_data[i] = f[\"x\"][str(10*i)][0]\n",
-    "        postproc_data[i] = f[\"log_x\"][str(10*i)][0]\n",
-    "ax.plot(t, numeric_data, \"o\", label=\"Numeric Solution\")\n",
-    "ax.plot(t, postproc_data, \"o\", label=\"Postprocessed numeric solution\")\n",
-    "ax.set_xlabel(\"t\")\n",
-    "ax.set_xlim(0.0,1.0)\n",
-    "ax.set_ylabel(\"x(t)\")\n",
-    "ax.set_ylim(0.0,3.0)\n",
-    "ax.legend()\n",
-    "\n",
-    "plt.show()\n",
-    "\n",
-    "print(runge_kutta_problem[\"rk_comp.log_x_final\"])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "c0271992",
-   "metadata": {},
-   "source": [
-    "We first defined the component that we put in our postprocessing problem.\n",
-    "Note that while here, this problem only has one component, it can be as complex as you want it to be."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "dd639c1a",
-   "metadata": {},
-   "source": [
-    "## Functionals\n",
-    "Another feature of the `RungeKuttaIntegrator` is the computation of functionals (or more precisely linear combinations) based on the quantities (both from time integration and postprocessing).\n",
-    "Note that one of these linear combinations only takes data from *one* quantity.\n",
-    "If you want to compute a functional involving two quantities, combine them first via the postprocessing.\n",
-    "\n",
-    "To use this feature, you have to give a `FunctionalCoefficients` object to the `RungeKuttaIntegrator`.\n",
-    "Such an object needs implementations for two methods:\n",
-    "1. `list_quantities()`, which needs to return a list of strings.\n",
-    "These strings are supposed to be the quantities on which the instance of the `RungeKuttaIntegrator` is working on.\n",
-    "2. `get_coefficient()`, which gets an `int` (for a time step) and a `str` (for a quantity), and returns a `float` (for the coefficient of the functional for the given quantity at the time step).\n",
-    "\n",
-    "As example, we extend the multidisciplinary example from above.\n",
-    "First we define the class for functional coefficients:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "c3524341",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import annotations\n",
-    "from rkopenmdao.functional_coefficients import FunctionalCoefficients\n",
-    "\n",
-    "class MultidisciplinaryFunctionalCoefficients(FunctionalCoefficients):\n",
-    "    def __init__(self, num_steps: int, delta_t: float) -> None:\n",
-    "        self.num_steps = num_steps\n",
-    "        self.delta_t = delta_t\n",
-    "\n",
-    "    def list_quantities(self) -> list[str]:\n",
-    "        return [\"x\", \"y\"]\n",
-    "    \n",
-    "    def get_coefficient(self, time_step: int, quantity: str) -> float:\n",
-    "        if quantity == \"x\":\n",
-    "            if time_step == 0 or time_step == self.num_steps:\n",
-    "                return 0.5 * self.delta_t\n",
-    "            return self.delta_t\n",
-    "        elif quantity == \"y\":\n",
-    "            return self.num_steps**-1"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "22e6864c",
-   "metadata": {},
-   "source": [
-    "This is used to compute two functionals:\n",
-    "1. Over $x$, we want to compute an integral, and use a composite trapezoidal rule to approximate it.\n",
-    "2. Over $y$, we want to compute its average value over the domain (i.e. $[0,10]$)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3da1343",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delta_t = 0.01\n",
-    "num_steps = 1000\n",
-    "\n",
-    "integration_control = StepTerminationIntegrationControl(delta_t, num_steps, 0.0)\n",
-    "\n",
-    "functional_coefficients = MultidisciplinaryFunctionalCoefficients(num_steps, delta_t)\n",
-    "\n",
-    "time_stage_problem = om.Problem()\n",
-    "time_stage_problem.model.add_subsystem(\n",
-    "    \"Coupled_ODE_Comp1\",\n",
-    "    CoupledODEComponent1(integration_control=integration_control),\n",
-    "    promotes=[\"*\"]\n",
-    ")\n",
-    "time_stage_problem.model.add_subsystem(\n",
-    "    \"Coupled_ODE_Comp2\",\n",
-    "    CoupledODEComponent2(integration_control=integration_control),\n",
-    "    promotes=[\"*\"]\n",
-    ")\n",
-    "\n",
-    "time_stage_problem.model.nonlinear_solver=om.NewtonSolver(solve_subsystems=True, iprint=-2)\n",
-    "time_stage_problem.model.linear_solver=om.DirectSolver(iprint=-2)\n",
-    "\n",
-    "runge_kutta_problem = om.Problem()\n",
-    "runge_kutta_problem.model.add_subsystem(\n",
-    "    \"rk_comp\", \n",
-    "    RungeKuttaIntegrator(\n",
-    "        time_stage_problem=time_stage_problem, \n",
-    "        butcher_tableau=implicit_euler,\n",
-    "        integration_control=integration_control,\n",
-    "        time_integration_quantities=[\"x\", \"y\"],\n",
-    "        functional_coefficients=functional_coefficients\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "runge_kutta_problem.setup()\n",
-    "runge_kutta_problem.run_model()\n",
-    "\n",
-    "\n",
-    "print(\"numerical integral of numerical solution of x: \", runge_kutta_problem[\"rk_comp.x_functional\"][0])\n",
-    "print(\"analytical integral of analytical solution of x: \", np.sin(num_steps * delta_t) + np.cos(num_steps * delta_t) - 1)\n",
-    "print(\"average of numerical solution of y: \", runge_kutta_problem[\"rk_comp.y_functional\"][0])\n",
-    "print(\"average of analytical solution of y: \", np.sum([np.sin(delta_t*i) + np.cos(delta_t*i) for i in range(num_steps+1)])/(num_steps+1))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "5adae934",
-   "metadata": {},
-   "source": [
-    "The computation of the functional is enabled by giving the instance of `FunctionalCoefficients` to the `functional_coefficient` argument of the `RungeKuttaIntegrator`.\n",
-    "This adds additional outputs to the `RungeKuttaIntegrator`, one per quantity over which a functional is computed.\n",
-    "The variable name of these outputs are of the form `<quantity>_functional`, and their values can be extracted from the OpenMDAO-problem as usual.\n",
-    "\n",
-    "To illustrate that it is possible to compute functionals only over a subset of the quantities in an integrator, and also to use the quantities from postprocessing, let's look at a second example (which is reusing the postprocessing example):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58098158",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NinetyNinthStepFunctionalCoefficients(FunctionalCoefficients):\n",
-    "    def list_quantities(self) -> list[str]:\n",
-    "        return [\"log_x\"]\n",
-    "    \n",
-    "    def get_coefficient(self, time_step: int, quantity: str) -> float:\n",
-    "        if quantity == \"log_x\" and time_step == 99:\n",
-    "            return 1.0\n",
-    "        else:\n",
-    "            return 0.0\n",
-    "\n",
-    "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=100, delta_t=0.01)\n",
-    "\n",
-    "functional_coefficients = NinetyNinthStepFunctionalCoefficients()\n",
-    "\n",
-    "time_stage_problem = om.Problem()\n",
-    "time_stage_problem.model.add_subsystem(\"ODE_Comp\", ODEComponent(integration_control=integration_control))\n",
-    "\n",
-    "postproc_problem = om.Problem()\n",
-    "postproc_problem.model.add_subsystem(\"log_comp\", LogComponent())\n",
-    "\n",
-    "runge_kutta_problem = om.Problem()\n",
-    "runge_kutta_problem.model.add_subsystem(\n",
-    "    \"rk_comp\", \n",
-    "    RungeKuttaIntegrator(\n",
-    "        time_stage_problem=time_stage_problem,\n",
-    "        postprocessing_problem=postproc_problem,\n",
-    "        butcher_tableau=implicit_euler,\n",
-    "        integration_control=integration_control,\n",
-    "        time_integration_quantities=[\"x\"],\n",
-    "        postprocessing_quantities=[\"log_x\"],\n",
-    "        functional_coefficients=functional_coefficients,\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "runge_kutta_problem.setup()\n",
-    "runge_kutta_problem.run_model()\n",
-    "\n",
-    "print(runge_kutta_problem[\"rk_comp.log_x_functional\"][0])\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "dacb00c7",
-   "metadata": {},
-   "source": [
-    "The used \"functional\" coefficients take the value of the 99th time step of the quantity `\"log_x\"` and make it an output of the `RKIntegrator`.\n",
-    "The quantity `\"x\"` doesn't get an additional functional output, as `NinetyNinthStepFunctionalCoefficients` doesn't list it in its `list_quantities`\t"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "93d0013e",
@@ -757,7 +481,7 @@
    "metadata": {},
    "source": [
     "Now to a feature which already was active, but which we didn't make use of yet:\n",
-    "The `RungeKuttaIntegrator` supports calculation of derivatives, both in forward and reverse mode (under the condition that both the *time_stage_problem* and the optional *postprocessing_problem* support the given derivative mode wrt. to the in/outputs that the `RungeKuttaIntegrator` interacts with)\n",
+    "The `RungeKuttaIntegrator` supports calculation of derivatives, both in forward and reverse mode (under the condition that the *time_stage_problem* supports the given derivative mode wrt. to the in/outputs that the `RungeKuttaIntegrator` interacts with)\n",
     "\n",
     "We reuse the multidisciplinary example again, but with a twist:\n",
     "this time, we won't just simply do the time integration, but we want to find $x_0$ and $y_0$ such that $(x_N-1)^2 + y_N^2$ is minimized."
@@ -1001,19 +725,18 @@
    "source": [
     "## MPI Support\n",
     "\n",
-    "The `RungeKuttaIntegrator` can also work with MPI parallel problems (both for time integration and postprocessing).\n",
+    "The `RungeKuttaIntegrator` can also work with MPI parallel problems.\n",
     "In that case, the in- and outputs of the integration component will mimic the structure of the variables of the quantities in the inner problems.\n",
     "Both variants of MPI support from OpenMDAO are supported, meaning distributed variables and parallel groups.\n",
     "However, some conditions must be fulfilled on the inner problems for it to work:\n",
     "\n",
     "In general:\n",
-    "- Make sure that the communicators used by the `RungeKuttaIntegrator`-instance, the time stage problem, and the postprocessing problem are compatible, as in that the ranks used match for all of them (this is easiest achieved by just using the same communicator for all of them).\n",
+    "- Make sure that the communicators used by the `RungeKuttaIntegrator`-instance and the time stage problem are compatible, as in that the ranks used match for all of them (this is easiest achieved by just using the same communicator for all of them).\n",
     "Also, the different variables for the same quantity have to reside on the same rank(s), even across the different problems.\n",
     "The `RungeKuttaIntegrator` will create its in- and outputs accordingly. That means in particular\n",
     "\n",
     "For  distributed variables:\n",
     "- The distribution structure of the different variables for the same quantity must be the same, i.e. the variables with the `\"step_input_var\"`, `\"accumulated_stage_var\"` and `\"stage_output_var\"` for a quantity must be distributed in the same way, over the same ranks.\n",
-    "- Should you additionally use that quantity in a postprocessing problem, the variable with the `\"postproc_input_var\"` tag must share the same distribution structure.\n",
     "- The in- and outputs of the `RungeKuttaIntegrator` instance will be created such that they also share the same distribution structure.\n",
     "\n",
     "For parallel groups:\n",
