--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -393,7 +393,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "class ODEComponentWithStationaryInput(om.ExplicitComponent):\n",
     "    def initialize(self):\n",
     "        self.options.declare(\"integration_control\", types=IntegrationControl)\n",
@@ -679,6 +678,7 @@
    "outputs": [],
    "source": [
     "from rkopenmdao.integration_control import TimeTerminationIntegrationControl\n",
+    "from rkopenmdao.error_controller import ErrorControllerConfig\n",
     "from rkopenmdao.error_controllers import integral, pid\n",
     "from rkopenmdao.butcher_tableaux import (\n",
     "    embedded_second_order_two_stage_sdirk as two_stage_dirk,\n",
@@ -697,7 +697,7 @@
     "        integration_control=integration_control,\n",
     "        time_integration_quantities=[\"x\"],\n",
     "        error_controller=[pid, integral],\n",
-    "        error_controller_options={\"tol\": 1e-6},\n",
+    "        error_controller_options={\"config\": ErrorControllerConfig(tol=1e-6)},\n",
     "        adaptive_time_stepping=True,\n",
     "    )\n",
     ")\n",
