pylinting and debugging

--- a/doc/user_guide.ipynb
+++ b/doc/user_guide.ipynb
@@ -71,10 +71,13 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "73d93e3a",
+   "metadata": {
+    "is_executing": true
+   },
+   "outputs": [],
    "source": [
     "import openmdao.api as om\n",
     "from  rkopenmdao.integration_control import IntegrationControl\n",
@@ -103,12 +106,13 @@
     "        partials[\"k_i\", \"s_i\"] = delta_t / (1 - delta_t * butcher_diagonal_element)\n",
     "\n",
     "\n"
-   ],
-   "id": "9de4da2c41425b33"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "1dc8fa60",
+   "metadata": {},
    "source": [
     "You should notice a few things here. First, we gave the component an option for an `IntegrationControl` interface which can be called with `StepTerminationIntegrationControl` to terminate after defined number of steps or `TimeTerminationIntegrationControl` to terminate when time objective is reached.\n",
     "This interface contains data and metadata for the current time step and time stage.\n",
@@ -124,14 +128,16 @@
     "For each quantity you want to apply time integration on, an output with this tag needs to be present.\n",
     "\n",
     "Now lets see how this component is used in our time integrator, the `RungeKuttaIntegrator`."
-   ],
-   "id": "109f1e01770761e3"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "3f968dc0",
+   "metadata": {
+    "is_executing": true
+   },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -180,12 +186,13 @@
     "ax.legend()\n",
     "\n",
     "plt.show()\n"
-   ],
-   "id": "fa2e72babc9a5a81"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "39678e55",
+   "metadata": {},
    "source": [
     "We start by creating our instance of `IntegrationControl`.\n",
     "This requires the initial time of the differential equation, the number of time steps we want to simulate, as well as the step size.\n",
@@ -208,12 +215,13 @@
     "\n",
     "Afterward, we set up the outer problem, and let it run.\n",
     "At the end follows a plot to visually compare the numerical with the analytical result.\n"
-   ],
-   "id": "ebbd102349c1fe2f"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "dd16b160",
+   "metadata": {},
    "source": [
     "# A Multidisciplinary Example\n",
     "\n",
@@ -228,14 +236,14 @@
     "y(t) = \\cos(t) + \\sin(t).\n",
     "$$\n",
     "For OpenMDAO, the stage problem can be represented by two explicit components."
-   ],
-   "id": "5430ee74ed5c2391"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "a3d701a4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class CoupledODEComponent1(om.ExplicitComponent):\n",
     "    def initialize(self):\n",
@@ -286,23 +294,24 @@
     "        partials[\"ky_i\", \"x_old\"] = 1.0\n",
     "        partials[\"ky_i\", \"sx_i\"] = delta_t \n",
     "        partials[\"ky_i\", \"kx_i\"] = delta_t * butcher_diagonal_element"
-   ],
-   "id": "c17315835f4af6e5"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "6eb0b295",
+   "metadata": {},
    "source": [
     "Note that the different time integration variables of the quantities are distributed across the components.\n",
     "Lets apply the `RungeKuttaIntegrator` again and compare with the analytical solution."
-   ],
-   "id": "39cfc23e7599863"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "7d670a6a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "integration_control = StepTerminationIntegrationControl(initial_time=0.0, num_steps=1000, delta_t=0.01)\n",
     "\n",
@@ -364,24 +373,25 @@
     "ax2.legend()\n",
     "\n",
     "plt.show()"
-   ],
-   "id": "877c0e3a8131a8a5"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "660bc2c4",
+   "metadata": {},
    "source": [
     "# Further Options of the `RungeKuttaIntegrator`\n",
     "## Time-Independent Inputs\n",
     "Sometimes it's useful to not just have control over the initial values from the outer problem, but to also be able to manipulate other time-independent quantities from the other quantities, be it because of coupling with another stationary equation, or for optimization purposes. For that, the `RungeKuttaIntegrator` has an option to pass such inputs through, provided they are tagged accordingly:"
-   ],
-   "id": "70c48cca4e7578d6"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "1635ff9b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class ODEComponentWithStationaryInput(om.ExplicitComponent):\n",
     "    def initialize(self):\n",
@@ -452,32 +462,36 @@
     "    plt.show()\n",
     "    # # reseting data file\n",
     "    # runge_kutta_problem.model.rk_comp._setup_write_file()\n"
-   ],
-   "id": "6ebe494465601ea5"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
-   "source": "## Partial Derivatives and Checkpointing",
-   "id": "13525648ad5a34c0"
+   "id": "93d0013e",
+   "metadata": {},
+   "source": [
+    "## Partial Derivatives and Checkpointing"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "401b7157",
+   "metadata": {},
    "source": [
     "Now to a feature which already was active, but which we didn't make use of yet:\n",
     "The `RungeKuttaIntegrator` supports calculation of derivatives, both in forward and reverse mode (under the condition that the *time_stage_problem* supports the given derivative mode wrt. to the in/outputs that the `RungeKuttaIntegrator` interacts with)\n",
     "\n",
     "We reuse the multidisciplinary example again, but with a twist:\n",
     "this time, we won't just simply do the time integration, but we want to find $x_0$ and $y_0$ such that $(x_N-1)^2 + y_N^2$ is minimized."
-   ],
-   "id": "ed8d8bc7ff078c44"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "44b12676",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from rkopenmdao.checkpoint_interface.pyrevolve_checkpointer import PyrevolveCheckpointer\n",
     "\n",
@@ -561,12 +575,13 @@
     "    print(\"x0 = \", res_0[i,0], \" y_0 = \", res_0[i,1])\n",
     "    print(\"xN = \", res_N[i,0], \" y_N = \", res_N[i,1])\n",
     "    print(\"objective = \", res_obj[i])\n"
-   ],
-   "id": "1df641c3004a2e15"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "b76f8cdc",
+   "metadata": {},
    "source": [
     "Both forward and reverse mode yield the same result (within tolerance).\n",
     "\n",
@@ -575,14 +590,14 @@
     "2. `Checkpoint_options`, which is a dict for implementation specific options that are passed to the checkpointer.\n",
     "\n",
     "To illustrate, we use the reverse mode example, but this time use the `AllCheckpointer`:"
-   ],
-   "id": "bec6813e0b752969"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b8eb0f49",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from rkopenmdao.checkpoint_interface.all_checkpointer import AllCheckpointer\n",
     "\n",
@@ -640,26 +655,27 @@
     "print(\"xN = \", runge_kutta_problem[\"rk_comp.x_final\"], \" y_N = \", runge_kutta_problem[\"rk_comp.y_final\"])\n",
     "print(\"objective = \", runge_kutta_problem[\"square.sq\"])\n",
     "\n"
-   ],
-   "id": "baf39c753956841e"
+   ]
   },
   {
-   "metadata": {},
+   "attachments": {},
    "cell_type": "markdown",
+   "id": "c54ca331",
+   "metadata": {},
    "source": [
     "### Adaptive Timestepping\n",
     "\n",
     "In order to perform adaptive time stepping, the option `adaptive_time_stepping` should be toggled on. The `ButcherTableau` must be an embedded method, i.e. it should have 2 weight vectors that produce solutions of different orders `p`. Embedded methods are intended to provide an estimation of the local truncation error for a single Runge-Kutta step, enabling the control of error through adaptive step sizing. The step size is influenced by the type of the controller (e.g. Integral, PID) and the tolerance. It is also possible to utilize multiple types of error controllers, such that, the time stepping size can be refined with a different controller upon failure. \n",
     "In addition, it important to use the `TimeTerminationIntegrationControl`, to ensure that the objective time is reached.\n",
     "\n"
-   ],
-   "id": "a8ba3a9ca398c877"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "f796be58",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from rkopenmdao.integration_control import TimeTerminationIntegrationControl\n",
     "from rkopenmdao.error_controller import ErrorControllerConfig\n",
@@ -688,8 +704,7 @@
     "\n",
     "runge_kutta_problem.setup()\n",
     "runge_kutta_problem.run_model()"
-   ],
-   "id": "f0ca35e30badbb60"
+   ]
   },
   {
    "cell_type": "markdown",
